--- a/Sem2/Micro/PSets/ps2/ps2.tex
+++ b/Sem2/Micro/PSets/ps2/ps2.tex
@@ -78,17 +78,17 @@ Suppose there are $N$ bidders competing for a single object in an all-pay auctio
 \end{enumerate}
 \section*{Solution 1:}
     \subsection*{(a)}
-        Given prices $\{p_x, 1\}$ and allocations $\{\omega_{A,T}, \omega_{A,C}, \omega_{B, T}, \omega_{B,C}\}$, 
+        Given prices $\{p_x, 1\}$ and allocations $\{x,y,\omega_{A,T}, \omega_{A,C}, \omega_{B, T}, \omega_{B,C}\}$, 
         Tom solves:
         \begin{gather*}
             u_T = x^{\alpha}y^{1-\alpha} \\
             \text{s.t.}
-            p_xx + y \leq p_x\omega_{A,T} + \omega_{B,T}
+            p_xx + y = p_x\omega_{A,T} + \omega_{B,T}
         \end{gather*}
         and Cristina solves:
         \begin{gather*}
             u_C = x^{\beta}y^{1-\beta} \\
             \text{s.t.}
-            p_xx + y \leq p_x\omega_{A,C} + \omega_{B,C}
+            p_xx + y = p_x\omega_{A,C} + \omega_{B,C}
         \end{gather*}
 \end{document}
