--- a/Sem2/Micro/PSets/PS1/PS1.tex
+++ b/Sem2/Micro/PSets/PS1/PS1.tex
@@ -18,8 +18,9 @@
 
 \begin{center}
     \Large \textbf{Assignment \hwnumber} \\
-    \Large \textbf{\Information} \\
     \normalsize Due Date: January 23rd, 11:59pm \\
+    Please Show Your Work and Circle Your Final Answer \\
+    Submit as a single document
 \end{center}
 
 \section*{Question 1: Envelope Theorem}
@@ -47,15 +48,8 @@ where $X(\theta) = \{x \in \mathbb{R}^n | g_j(x) \leq \theta_j\}$.
 
 \section*{Question 3: Topkis' Theorem (Multi-Dimensional)}
 
-A firm has two inputs, capital ($k$) and labor ($l$), that it can use for production. Cost of capital and labor are $r \text{and} w$ , respectively. The firm's production function is 
-given by $f(k, l)$, and the firm sells its product at a fixed price $p$. Unlike part (c) in the previous question, the firm is not constrained to produce a fixed level of output.
-Thus, the firm's problem is:
-\begin{center}
-    $\max_{k,l} pf(k,l) - wl - rk$
-\end{center}
-Assume that $\frac{\partial f}{\partial k} \text{and} \frac{\partial f}{\partial l}$ exist and are positive, and that $\frac{\partial^2 f}{\partial k\partial l} < 0$.
 \begin{enumerate}
-    \item[(a)] Provide an interpretation for the assumption that $\frac{\partial^2 f}{\partial k\partial l} < 0$.
+    \item[(a)] Interpret the assumption $\frac{\partial^2 f}{\partial l \partial k} < 0$.
     \item[(b)] Analyze how optimal labor choice changes as wage $w$ increases.
 \end{enumerate}
 
@@ -68,141 +62,35 @@ Assume that $\frac{\partial f}{\partial k} \text{and} \frac{\partial f}{\partial
 \end{enumerate}
 
 \section*{Solution 1:}
-    \subsection*{(a)}
-        Using the envelope theorem on the optimization problem:
-        \begin{gather*}
-        V(\theta)=\max_{x\in\mathcal{X}} f(x,\theta) \\
-        \text{where} X(\theta) = \{x\in\mathbb{R}^n|g_j(x)\leq\theta_j\} \\
-        \end{gather*}
-        \begin{proof}
-        \begin{center}
-            $\frac{\partial v}{\partial\theta_j} = \frac{\partial f(x^*(\theta),\theta_j)}{\partial\theta_j}
-            +\sum\limits_{j=1}^m\frac{\partial f}{\partial x_j}\frac{\partial x^*(\theta_j)}{\partial\theta_j}
-            = \frac{\partial f}{\partial\theta_j} + \sum\limits_{j=1}^m\lambda\frac{\partial X(\theta_j)}{\partial x_j}
-            \cdot\frac{\partial x^*(\theta)}{\partial\theta_j}$ \\
-            $\sum\limits_{j=1}^m\lambda\frac{\partial X(\theta_j)}{\partial x_j}\cdot\frac{\partial x^*(\theta)}{\partial\theta_j}
-            = \sum\limits_{j=1}^m\frac{\partial X(\theta)}{\partial(x_j)}\cdot\Delta x_j + \frac{\partial X(\theta)}{\partial\theta_j}\cdot\Delta\theta_j$ \\
-        \end{center}
-        Now, we can apply the following:
-        \begin{center}
-            $\frac{1}{\Delta\theta_j}\cdot[\sum\limits_{j=1}^m\frac{\partial X(\theta)}{\partial x_j}\Delta x_j +
-            \frac{\partial X(\theta_j)}{\partial\theta_j}]$ \\
-            $\sum\limits_{j=1}^m\frac{\partial X(\theta)}{\partial x_j}\frac{\Delta x_j}{\Delta\theta_j} +
-            \frac{\partial X(\theta)}{\partial\theta_j}$ \\
-        \end{center}
-        Finally, we can yield an end result:
-        \begin{center}
-            $\boxed{\frac{V(\theta)}{\partial\theta_j} = \frac{\partial f}{\partial \theta_j} +\sum\limits_{j=1}^m \lambda_j[-\frac{\partial X(\theta)}{\partial\theta_j}]}$
-        \end{center}
-        This is the result since, at the max, $x^*=0$ thus eliminating the first term in the summation and leaving the derivative of the
-        constraint with respect to $\theta_j$.
-        \end{proof}
-    \subsection*{(b)}
-        The derivative of the value function with respect to $\theta_j$ is the derivative of the objective function with respect to $\theta_j$ plus the KKT multipliers $\sum\limits_{j=1}^m\lambda_j$
-        multiplied by the derivative of the constraint with respect to $\theta_j$. This means that the KKT multipliers have an effect on the value function via the constraint. 
-    \subsection*{(c)}
-        For consumer maximization, the utility function is $f(x,\theta)$, the constraints are $g_j(x)\leq\theta_j$, and $\theta$ is the budget. The KKT multipliers are the shadow prices of the constraints,
-        which are the marginal utility of the budget constraint. 
-\section*{Solution 2:}
-    \subsection*{(a)}
-        \begin{proof}
-          Let's assume there exist variables $a_H$ and $a_L$ such that $a_H > a_L$. Further, define $f(a_H,\theta') - f(a_L,\theta') \geq f(a_H,\theta)-f(a_L,\theta)$. Next, substitute
-          $a_H = \max\{x,x'\} \text{and} a_L = x'$ such that $x\in x^*(\theta) \text{and} x'\in x^*(\theta')$. This yields $f(\max\{x,x'\},\theta') - f(x',\theta') \geq f(\max\{x,x'\},\theta) - f(x',\theta)$.
-          Further, define $\theta'>\theta$. If the maximum of $x$ and $x'$ with respect to $\theta$ is $x'$, the right side of the term goes to zero. Otherwise, the inequality holds. Let's
-          proceed with the assumption that the right is zeroed out, allowing us the rearrange and get the inequality $f(\max\{x',x\},\theta')\geq f(x',\theta')$. This, therefore, states that 
-          $\max\{x',x\} \in x^*(\theta')$. Now, assume that $a_H = x$ and $a_L = \min\{x,x'\}$. This yields $f(x,\theta') - f(\min\{x,x'\},\theta') \geq f(x,\theta) - f(\min\{x,x'\},\theta)$. 
-          Now, assuming that $\min\{x,x'\} = x$, the left side equals 0, thus allowing us to rearrange as $f(\min\{x,x'\},\theta)\geq f(x,\theta)$. This result shows that $\min\{x,x'\}\in x^*(\theta)$.
-      \end{proof}
-    \subsection*{(b)}
-      In this case, we can say that $-c^*(q)$ has increasing differences. Derivation follows:
-      \begin{gather*}
-        p(q)q - c(q,\theta) = \Pi \\
-        \text{Applying Topkis' Theorem} \\
-        -c(q',\theta')-(-c(q,\theta')) \geq -c(q,\theta)-(-c(q,\theta)) \geq 0 \\
-        q\in q^*(\theta); \ q'\in q^*(\theta'); \ \theta' > \theta \\
-        c(q,\theta') >_s c(q,\theta)
-      \end{gather*}
-    \subsection*{(c)}
-      \begin{gather*}
-        \min_{k,l} rk+wl \ \text{subject to} \ f(k,\phi l) = q \\
-        \phi l = L(k,q) \rightarrow l = \frac{L(k,q)}{\phi} \\
-        \text{Substitute into the objective function} \\
-        \min_{k} rk + w\frac{L(k,q)}{\phi} \\
-        g = rk + w\frac{L(k,q)}{\phi} \\
-        \frac{\partial g}{\partial k} = r + \frac{w}{\phi}\frac{\partial L(k,q)}{\partial k} = 0 \\
-        \frac{\partial^2 g}{\partial k\partial \phi} = -\frac{w}{\phi^2}\frac{\partial L(k,q)}{\partial k} \\
-        \text{Discerning $L(k,q)$'s sign} \\
-        f(k,\phi\frac{1}{\phi}L(k,q)) \\
-        \frac{\partial f}{\partial k}: \ f_k+ f_lL_k(k,q) = 0 \\
-        L_k(k,q) = -\frac{f_k}{f_l} \\
-      \end{gather*}
-      $L_k(k,q) \leq 0 \ \text{if} \ \phi>0$. Since $-\frac{f_k}{f_l}$ is negative since $f_k, f_l\geq0$, 
-      the optimal $k$ is non-decreasing in $\phi$ so long as the ratio of marginal product of capital and 
-      labor is positive.
-      For the case on non-increasing, $k^*$ is non-increasing in $\phi$ if the ratio of the marginal 
-      product of capital and labor is negative.
-
-\section*{Question 3:}
-    \subsection*{(a)}
-      $\frac{\partial^2 f}{\partial l\partial k}<0$ is due to both $\frac{\partial f}{\partial k}, \ \frac{\partial f}{\partial l} >0$. Thus, the cross-partial will be negative due to concavity.
-      Further, this makes intuitive sense as an increase in cost in one input would necessitate a decrease in the use of that input to keep costs at a utility maximizing level.
+  \subsection*{(a)}
+    Using the envelope theorem on the optimization problem:
+    \begin{gather*}
+      V(\theta)=\max_{x\in\mathcal{X}} f(x,\theta) \\
+      \text{where} X(\theta) = \{x\in\mathbb{R}^n|g_j(x)\leq\theta_j\} \\
+    \end{gather*}
+    \begin{proof}
+      \begin{center}
+        $\frac{\partial v}{\partial\theta_j} = \frac{\partial f(x^*(\theta),\theta_j)}{\partial\theta_j}
+        +\sum\limits_{j=1}^m\frac{\partial f}{\partial x_j}\frac{\partial x^*(\theta_j)}{\partial\theta_j}
+        = \frac{\partial f}{\partial\theta_j} + \sum\limits_{j=1}^m\lambda\frac{\partial X(\theta_j)}{\partial x_j}
+        \cdot\frac{\partial x^*(\theta)}{\partial\theta_j}$ \\
+        $\sum\limits_{j=1}^m\lambda\frac{\partial X(\theta_j)}{\partial x_j}\cdot\frac{\partial x^*(\theta)}{\partial\theta_j}
+        = \sum\limits_{j=1}^m\frac{\partial X(\theta)}{\partial(x_j)}\cdot\Delta x_j + \frac{\partial X(\theta)}{\partial\theta_j}\cdot\Delta\theta_j$ \\
+      \end{center}
+      Now, we can apply the following:
+      \begin{center}
+        $\frac{1}{\Delta\theta_j}\cdot[\sum\limits_{j=1}^m\frac{\partial X(\theta)}{\partial x_j}\Delta x_j +
+        \frac{\partial X(\theta_j)}{\partial\theta_j}]$ \\
+        $\sum\limits_{j=1}^m\frac{\partial X(\theta)}{\partial x_j}\frac{\Delta x_j}{\Delta\theta_j} +
+        \frac{\partial X(\theta)}{\partial\theta_j}$ \\
+      \end{center}
+      Finally, we can yield an end result:
+      \begin{center}
+        $\boxed{\frac{V(\theta)}{\partial\theta_j} = \frac{\partial f}{\partial \theta_j} + \lambda[-\frac{\partial X(\theta)}{\partial\theta_j}]}$
+      \end{center}
+      This is the result since, at the max, $x^*=0$ thus eliminating the first term in the summation and leaving the derivative of the
+      constraint with respect to $\theta_j$.
+    \end{proof}
+  \subsection*{(b)}
     
-    \subsection*{(b)}
-      As $w$ increases, the firm will substitute labor for capital as the cost of labor increases. This is due to the given fact that $\frac{\partial^2 f}{\partial l\partial k}<0$ and the firm's objective is to minimize costs.
-\section*{Question 4:}
-    \subsection*{(a)}
-      \begin{gather*}
-        {\max_{0\leq T \leq W}} [\max_{p_xx + p_yy = T} x^{\frac{1}{2}}y^{\frac{1}{2}} + \frac{W-T}{p_z}] \\
-        \mathcal{L} = (xy)^{\frac{1}{2}} + \lambda(T-p_xx-p_yy)\\
-        \mathcal{L}_x: \frac{1}{2}(\frac{y}{x})^{\frac{1}{2}} = \lambda p_x \\
-        \mathcal{L}_y: \frac{1}{2}(\frac{x}{y})^{\frac{1}{2}} = \lambda p_y \\
-        \frac{y}{x} = \frac{p_x}{p_y} \rightarrow y = \frac{p_x}{p_y}x \\
-        T = p_xx + p_y(\frac{p_x}{p_y}x) \rightarrow x = \frac{T}{2p_x} \rightarrow y = \frac{T}{2p_y} \\
-        \text{Substitute into the objective function} \\
-        \frac{T}{2p_x}^{\frac{1}{2}}\frac{T}{2p_y}^{\frac{1}{2}} + \frac{W-T}{p_z} \\
-        \frac{T}{2\sqrt{p_xp_y}} + \frac{W-T}{p_z} \\
-        \text{Take the derivative with respect to T} \\
-        \boxed{\frac{1}{2\sqrt{p_xp_y}} = \frac{1}{p_z}} \\
-      \end{gather*}
-      This yields $T = 0$ in the case that $\frac{1}{2\sqrt{p_xp_y}} < \frac{1}{p_z}$ and $T = W$ in the case that $\frac{1}{2\sqrt{p_xp_y}} > \frac{1}{p_z}$.
-    \subsection*{(b)}
-      \begin{gather*}
-        {\max_{0\leq T \leq W}} [\max_{p_xx + p_yy = T} x^{\alpha}y^{\alpha} + \frac{W-T}{p_z}] \\
-        \mathcal{L} = (xy)^{\alpha} + \lambda(T-p_xx-p_yy)\\
-        \mathcal{L}_x: \alpha x^{\alpha-1}y^{\alpha} = \lambda p_x \\
-        \mathcal{L}_y: \alpha x^{\alpha}y^{\alpha-1} = \lambda p_y \\
-        \frac{y}{x} = \frac{p_x}{p_y} \rightarrow y = \frac{p_x}{p_y}x \\
-        T = p_xx + p_y(\frac{p_x}{p_y}x) \rightarrow x = \frac{T}{2p_x} \rightarrow y = \frac{T}{2p_y} \\
-        \text{Substitute into the objective function} \\
-        \frac{T}{(4p_xp_y)^{\alpha}}^{2\alpha} + \frac{W-T}{p_z} \\
-        \text{Take the derivative with respect to T} \\
-        (2\alpha)\frac{T}{4p_xp_y}^{2\alpha-1} = \frac{1}{p_z} \\
-        \text{Solve for T} \\
-        \boxed{T = (\frac{(4p_xp_y)^{\alpha}}{2\alpha p_z})^{\frac{1}{2\alpha-1}}}
-      \end{gather*}
-      $T$ does not rely on $W$ due to the utility function having quasilinearity.
-    \subsection*{(c)}
-      \begin{gather*}
-        {\max_{0\leq T \leq W}} [\max_{p_xx + p_yy = T} x^{\alpha}y^{\beta} + h(\frac{W-T}{p_z})] \\
-        \mathcal{L} = x^{\alpha}y^{\beta} + h(\frac{W-T}{p_z}) + \lambda(T-p_xx-p_yy)\\
-        \mathcal{L}_x: \alpha x^{\alpha-1}y^{\beta} = \lambda p_x \\
-        \mathcal{L}_y: \beta x^{\alpha}y^{\beta-1} = \lambda p_y \\
-        \frac{y}{x}\frac{\alpha}{\beta} = \frac{p_x}{p_y} \rightarrow y = \frac{\beta}{\alpha}\frac{p_x}{p_y}x \\
-        T = p_xx + p_y(\frac{\beta}{\alpha}\frac{p_x}{p_y}x) \rightarrow x = \frac{\alpha T}{p_x(\alpha+\beta)} \rightarrow y = \frac{\beta T}{p_y(\alpha+\beta)} \\
-        \text{Substitute into the objective function} \\
-        \left(\frac{\alpha T}{p_x(\alpha+\beta)}\right)^{\alpha}\left(\frac{\beta T}{p_y(\alpha+\beta)}\right)^{\beta} + h(\frac{W-T}{p_z}) \\
-        \text{Let's Simplify a bit:} \\
-        \left(\frac{(\alpha\beta)T}{(\alpha+\beta)p_xp_y}\right)^{\alpha+\beta} + h(\frac{W-T}{p_z}) \\
-        \gamma(T) = \left(\frac{(\alpha\beta)T}{(\alpha+\beta)p_xp_y}\right)^{\alpha+\beta} \\
-        u(T,W) = \gamma(T) + h(\frac{W-T}{p_z}) \\
-        \text{Supermodularity of $u(T,W)$ implies that $T$ is weakly increasing in $W$} \\
-        \gamma(T) \ \text{does not depend on $W$ and thus is irrelevant} \\
-        h(z) \ \text{depends on $W$ and thus should be analyzed:} \\
-        \exists \ W'>W ; \ T'>T \\
-        u(T',W') - u(T, W') \geq u(T',W) - u(T,W) \\
-        \text{Holding $T$ constant,} \ h(\frac{W'-T}{p_z}) \geq h(\frac{W-T}{p_z}) \\
-        \text{Holding $W$ constant,} \ h(\frac{W-T'}{p_z}) \leq h(\frac{W-T}{p_z}) \\
-        \therefore u(T',W') - u(T, W') \geq u(T',W) - u(T,W) \ \text{is satisfied}\\
-      \end{gather*}
-      By increasing differences being satisfied, $T^*$ is weakly increasing in $W$.
 \end{document}
