--- a/Sem2/Macro/PSets/PS1/PS1.tex
+++ b/Sem2/Macro/PSets/PS1/PS1.tex
@@ -146,5 +146,9 @@ For simplicity, assume $r = 0$ and $\beta = 1$.
             B = \frac{D+1}{D+1} \\
             \therefore D = 0; \ B = 1
         \end{gather*}
+        For the retiree. the function is as follows:
+        \begin{gather*}
+          c_t = \frac{a_t}{a_{t+1}-t} \ \text{s.t.} \ t > 60 
+        \end{gather*}
 \end{document}
 
