--- a/Sem2/Macro/PSets/PS1/PS1.tex
+++ b/Sem2/Macro/PSets/PS1/PS1.tex
@@ -116,39 +116,57 @@ For simplicity, assume $r = 0$ and $\beta = 1$.
         Here, they are living off of financial wealth.
 \section*{Solution 2:}
     \subsection*{(a)}
-        \begin{gather*}
-            \mathbb{E}_t[\sumtb\beta^{(s-t)} -\frac{(c_s-\bar{c})^2}{2}] \\
-            \text{s.t.} \ c_t + a_{t+1} = y_t + a_t \\
-            y_t = \begin{cases} 
-            y_{t-1} + \varepsilon_t & \text{if } t \leq 40 \\
-            0 & \text{if } t > 40 
-            \end{cases}
-        \end{gather*}
-        In the case of quadratic utility which is given assumptions $r=0; \ \beta=1$, we know that the
-        Euler equation is as follows:
-        \begin{gather*}
-            c_t = \mathbb{E}_tc_{t+1} \\
-        \end{gather*}
-        Then, we can derive the consumption functions by guess-and-verify. For instance, the worker
-        function is found as follows:
-        \begin{gather*}
-            c_t = Ay_{t-1} + B\epsilon_t + Da_t \\
-            c_{t+1} = Ay_{t-1} + A\epsilon_t + B\epsilon_{t+1} + Da_{t+1} \\
-            Ay_{t-1} + B\epsilon_t + Da_t = Ay_{t-1} + A\epsilon_t + B\epsilon_{t+1} + Da_{t+1} \\
-            B\epsilon_t + Da_t = A\epsilon_t + B\epsilon_{t+1} + Da_{t+1} \\
-            \text{in expectation, $\epsilon_{t+1} = 0$} \\
-            a_{t+1} = \epsilon_t(1-\frac{(B-A)}{D}) + a_t \\
-            c_t = y_{t-1} + \epsilon_t + a_t - \epsilon_t\frac{(B-A)}{D} - a_t \\
-            c_t = y_{t-1} + \epsilon_t(1-\frac{(B-A)}{D}) \\
-            \therefore \ A = 1; \ B = (1-\frac{(B-A)}{D});  \\
-            BD = D - B + A \\
-            B(D + 1) = D + 1 \\
-            B = \frac{D+1}{D+1} \\
-            \therefore D = 0; \ B = 1
-        \end{gather*}
-        For the retiree. the function is as follows:
-        \begin{gather*}
-          c_t = \frac{a_t}{a_{t+1}-t} \ \text{s.t.} \ t > 60 
-        \end{gather*}
+      \begin{gather*}
+          \mathbb{E}_t[\sumtb\beta^{(s-t)} -\frac{(c_s-\bar{c})^2}{2}] \\
+          \text{s.t.} \ c_t + a_{t+1} = y_t + a_t \\
+          y_t = \begin{cases} 
+          y_{t-1} + \varepsilon_t & \text{if } t \leq 40 \\
+          0 & \text{if } t > 40 
+          \end{cases}
+      \end{gather*}
+      In the case of quadratic utility which is given assumptions $r=0; \ \beta=1$, we know that the
+      Euler equation is as follows:
+      \begin{gather*}
+          c_t = \mathbb{E}_tc_{t+1} \\
+      \end{gather*}
+      Then, we can derive the consumption functions by recursion. For instance, the worker's function is found as follows:
+      \begin{gather*}
+        c_{40} = y_{40} + a_{40} - a_{41} \\
+        c_{41} = \frac{a_{41}}{20} \\
+        y_{40} + a_{40} - a_{41} = \frac{a_{41}}{20} \Rightarrow \frac{20}{21}(y_{40}+a_{40}) = a_{40} \\
+        c_{40} = y_{40} + a_{40} - \frac{20}{21}(y_{40}+a_{40}) \Rightarrow \frac{1}{21}y_{40} + \frac{1}{21}a_{40} \\
+        c_{39} = y_{39} + a_{39} - a_{40} = \frac{1}{21}(y_{39} + \varepsilon_{40} + a_{40}) \\
+        a_{40} = \frac{20}{22}y_{39} + \frac{21}{22}a_{39} \\
+        c_{39} = y_{39} + a_{39} - \frac{20}{22}y_{39} - a_{21}{22}a_{39} \Rightarrow \frac{2}{22}y_{39} + \frac{1}{22}a_{39} \\
+        \text{and the pattern continues s.t.} \ c_t = \frac{40-t+1}{T-t+1}y_t + \frac{1}{T-t+1} \\
+      \end{gather*}
+      For the retiree. the function is as follows:
+      \begin{gather*}
+        c_t = \frac{a_t}{T-t} \ \text{s.t.} \ t > 40  \\
+        c_{60} = a_{60} \\
+        c_{59} = a_{59}-a_{60} \\
+        c_{60} = c_{59} \Rightarrow 2a_{60} = a_{59} \Rightarrow a_{60} = \frac{1}{2}a_{59} \\
+        c_{59} = \frac{a_{59}}{2} = a_{58} - a_{59} = c_{58} \\
+        a_{58} = \frac{3a_{59}}{2} \Rightarrow a_{59} = \frac{2}{3}a_{58} \\
+        c_{58} = \frac{a_{58}}{3} \\
+        \text{and the pattern follows s.t.} \ c_{t} = \frac{1}{T-t+1}
+      \end{gather*}
+    \subsection*{(b)}
+    \subsection*{(c)}
+      \begin{gather*}
+        \Delta c_{t+1} = \frac{40-t+1}{T-t+1}(y_t+\varepsion_t) + \frac{1}{T-t+1}a_{t} \\
+        \frac{\partial\Delta c_{t+1}}{\partial\varepsilon_{t+1}} = \frac{40-t+1}{T-t+1} = \alpha_{t+1} \\
+        \frac{\partial\alpha_{t+1}}{\partial t} = \frac{20}{(T-t+1)^2} \\
+        t = 1: \ \alpha_t = \frac{20}{360} = \frac{1}{18} \\
+        t = 39: \ \alpha_t = \frac{20}{440} = \frac{1}{22} \\
+      \end{gather*}
+      $a_t$ becomes less influential as time goes on. 
+    \subsection*{(d)}
+      In random walk, $\Delta c_t = \varepsilon_t$. Above, \alpha shrank as $t \rightarrow T$ but the shock stacked from period $t$ to $t+1$.
+    \subsection*{(e)}
+      By law of iterated expectations, it would be expected that there is no shock $\varepsilon_{t+1}$. Because of this, $y_t = y_{t+1}$. Thus, with no income variation, the agent will choose to consume all earned income as they are guaranteed they will receive the same increment in period $t+1$. The consumption function is thus:
+      \begin{gather*}
+        c_t = y_t
+      \end{gather*}
 \end{document}
 
