--- a/Sem2/Macro/PSets/PS1/PS1.tex
+++ b/Sem2/Macro/PSets/PS1/PS1.tex
@@ -118,7 +118,7 @@ For simplicity, assume $r = 0$ and $\beta = 1$.
     \subsection*{(a)}
       \begin{gather*}
           \mathbb{E}_t[\sumtb\beta^{(s-t)} -\frac{(c_s-\bar{c})^2}{2}] \\
-          \text{s.t.} \ c_t + a_{t+1} = y_t + a_t \\
+          \text{s.t.} \ \sumt c_t + (q-1)\sum\limits_{t=1}{T}a_{t} = \sumt y_t \\
           y_t = \begin{cases} 
           y_{t-1} + \varepsilon_t & \text{if } t \leq 40 \\
           0 & \text{if } t > 40 
