--- a/Sem2/Macro/PSets/PS1/PS1.tex
+++ b/Sem2/Macro/PSets/PS1/PS1.tex
@@ -171,7 +171,7 @@ For simplicity, assume $r = 0$ and $\beta = 1$.
       \end{gather*}
       $a_t$ becomes less influential as time goes on. 
     \subsection*{(d)}
-      In random walk, $\Delta c_t = \varepsilon_t$. Above, \alpha shrank as $t \rightarrow T$ but the shock stacked from period $t$ to $t+1$.
+      In random walk, $\Delta c_t = \varepsilon_t$. Above, $\alpha$ shrank as $t \rightarrow T$ but the shock stacked from period $t$ to $t+1$.
     \subsection*{(e)}
       By law of iterated expectations, it would be expected that there is no shock $\varepsilon_{t+1}$. Because of this, $y_t = y_{t+1}$. Thus, with no income variation, the agent will choose to consume all earned income as they are guaranteed they will receive the same increment in period $t+1$. The consumption function is thus:
       \begin{gather*}
