--- a/Sem2/Micro/PSets/ps2/ps2.tex
+++ b/Sem2/Micro/PSets/ps2/ps2.tex
@@ -92,12 +92,12 @@ Suppose there are $N$ bidders competing for a single object in an all-pay auctio
         p_xx + y = p_x\omega_{A,C} + \omega_{B,C}
     \end{gather*}
   \subsection*{(b)}
-    
 \section*{Solution 2:}
+  \begin{proof}
+  \end{proof}
 \section*{Solution 3:}
   \subsection*{(a)}
     \begin{proof}
-      Assume there is an allocation $x$ which solve 
     \end{proof}
   \subsection*{(b)}
   \subsection*{(c)}
